<resources>
    <string name="app_name">霍尼莱夫</string>
    <string name="app_network_error">网络异常!</string>

    <string name="empty"></string>
    <string name="placeholder_error">出错啦，请稍后重试</string>
    <string name="placeholder_empty">暂无数据</string>
    <string name="placeholder_network">暂无网络</string>
    <string name="placeholder_reload">点我重试哦</string>
    <string name="loading">加载中&#8230;</string>
    <string name="tag_on">on</string>
    <string name="tag_off">off</string>
    <string name="not_available">暂无</string>

    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="placeholder">--</string>

    <string name="dialog_know">知道了</string>
    <string name="dialog_title">提示</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_yes">是</string>
    <string name="dialog_no">否</string>
    <string name="dialog_review">复核</string>
    <string name="dialog_refuse">拒绝</string>

    <string name="verification_code">短信验证码</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="verification_code_get">获取验证码</string>

    <string name="validate_phone">请输入正确的手机号</string>
    <string name="validate_pwd">密码为8&#8211;16位字符,含字母和数字</string>
    <string name="validate_code">请输入正确的验证码</string>
    <string name="validate_card">请进行身份证识别</string>
    <string name="validate_real_name">请输入真实姓名</string>
    <string name="validate_id_card">请输入正确的身份证号</string>
    <string name="validate_bank_card">请输入正确的银行帐号</string>
    <string name="validate_pwd_different">两次输入的密码不一致</string>
    <string name="validate_cannot_be_empty">%1$s不能为空</string>
    <string name="validate_please_choose">请选择%1$s</string>
    <string name="validate_init_exceptions">数据初始化异常</string>

    <string name="operate_next">下一步</string>
    <string name="operate_save">保存</string>
    <string name="operate_delete">删除</string>
    <string name="operate_submit">提交</string>
    <string name="operate_choose">请选择</string>
    <string name="operate_choose_area">请选择省市区</string>
    <string name="operate_transaction">发起交易</string>
    <string name="operate_modify">修改</string>
    <string name="operate_select_all">全选</string>
    <string name="operate_put_on">上架</string>
    <string name="operate_pull_off">下架</string>
    <string name="operate_complete">完成</string>
    <string name="operate_search">搜索</string>
    <string name="operate_cancel">取消</string>
    <string name="operate_confirm">确定</string>

    <string name="piece">%1$s张</string>
    <string name="days">%1$s天</string>
    <string name="percent">%1$s%%</string>
    <string name="yuan">%1$s元</string>
</resources>